--- a/50/VSL/index.html
+++ b/50/VSL/index.html
@@ -165,13 +165,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 				
                 <!-- Desconto -->
 				<div class="esconder texto-centralizado">
-				<p>usted ha ganado un increíble DESCUENTO!<span class="destaque"> solo hoy por U$24 haz clic ahora!</span></p>
+				<p>usted ha ganado un increíble DESCUENTO!<span class="destaque"> solo hoy por U$21 haz clic ahora!</span></p>
 				</div>
 				<!-- Desconto --> 
 
 
 				<!-- CTA !-->
-				<a href="https://pay.hotmart.com/E86314511Q?off=mcpers1d&checkoutMode=10&sck=50" class="cta esconder">
+				<a href="https://pay.hotmart.com/E86314511Q?off=rc5gkut5&checkoutMode=10sck=50" class="cta esconder">
 					<img src="img/Frame-13.webp" width="100%" height="100%" class="bt img-fluid" alt="Comprar ahora">
 				</a>
 				<!-- CTA !-->	                
@@ -465,13 +465,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
                  <!-- Desconto -->
                  <div class="esconder texto-centralizado">
-                 <p>usted ha ganado un increíble DESCUENTO!<span class="destaque"> solo hoy por U$24 haz clic ahora!</span></p>
+                 <p>usted ha ganado un increíble DESCUENTO!<span class="destaque"> solo hoy por U$21 haz clic ahora!</span></p>
                  </div>
                  <!-- Desconto -->
 
 				
 				<!-- CTA !-->
-				<a href="https://pay.hotmart.com/E86314511Q?off=mcpers1d&checkoutMode=10&sck=50" class="cta esconder">
+				<a href="https://pay.hotmart.com/E86314511Q?off=rc5gkut5&checkoutMode=10sck=50" class="cta esconder">
 					<img src="img/Frame-13.webp" width="100%" height="100%" class="bt img-fluid" alt="Comprar ahora">
 				</a>
 				<!-- CTA !-->					
