--- a/Criativo-03/VSL/index.html
+++ b/Criativo-03/VSL/index.html
@@ -171,7 +171,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
 				<!-- CTA !-->
-				<a href="https://pay.hotmart.com/R85599731I?off=igwlyv5c&checkoutMode=10&sck=Criativo=03" class="cta esconder">
+				<a href="https://pay.hotmart.com/E86314511Q?off=rc5gkut5&checkoutMode=10&sck=Criativo=03" class="cta esconder">
 					<img src="img/Frame-13.webp" width="100%" height="100%" class="bt img-fluid" alt="Comprar ahora">
 				</a>
 				<!-- CTA !-->	                
@@ -471,7 +471,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 				
 				<!-- CTA !-->
-				<a href="https://pay.hotmart.com/R85599731I?off=igwlyv5c&checkoutMode=10&sck=Criativo=03" class="cta esconder">
+				<a href="https://pay.hotmart.com/E86314511Q?off=rc5gkut5&checkoutMode=10&sck=Criativo=03" class="cta esconder">
 					<img src="img/Frame-13.webp" width="100%" height="100%" class="bt img-fluid" alt="Comprar ahora">
 				</a>
 				<!-- CTA !-->					
