--- a/34/quiz1/index.html
+++ b/34/quiz1/index.html
@@ -144,7 +144,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     </footer>
     <script type="text/javascript">
         function redirect() {
-            location.href = "https://suenosprofesion.site/34/VSL" // SEU LINK AQUI
+            location.href = "https://trabajodesdecasa.site/34/VSL" // SEU LINK AQUI
         }
     </script>
     <script src="js/jquery.min.js"></script>
@@ -231,7 +231,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
 <!-- Fixador de utm !-->	
 <script>
-	let prefix = [“ https://suenosprofesion.site/ "];
+	let prefix = [“ https://trabajodesdecasa.site/ "];
 	function getParams() {
 	let t = "",
 	e = window.top.location.href,
