--- a/39/quiz3/index.html
+++ b/39/quiz3/index.html
@@ -232,7 +232,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
     </div>
     <p style="text-align: center; font-weight: ; font-family: 'Poppins'; font-size: 15px; letter-spacing: -1px; padding-top: 25px;">© 2023 - Todos los derechos reservados. Este sitio no forma parte ni está respaldado por Facebook. Facebook es una marca comercial de Facebook, Inc.</p>
-    <p style="text-align: center; font-weight: ; font-family: 'Poppins';"><a href="https://suenosprofesion.site/VSL/#" style="color: black;">Termos de Uso</a> | <a href="https://protocolozerobarriga.com/privacidade" style="color: black;">Política de Privacidade</a></p>
+    <p style="text-align: center; font-weight: ; font-family: 'Poppins';"><a href="https://trabajodesdecasa.site/VSL/#" style="color: black;">Termos de Uso</a> | <a href="https://protocolozerobarriga.com/privacidade" style="color: black;">Política de Privacidade</a></p>
   </div>
   <script>
     function segunda() {
@@ -252,7 +252,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       document.getElementById("quinta").classList.remove("hide")
     }
     function redirect() {
-      location.href = "https://suenosprofesion.site/39/VSL" // SEU LINK AQUI
+      location.href = "https://trabajodesdecasa.site/39/VSL" // SEU LINK AQUI
     }
   </script>
 
@@ -342,7 +342,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
 <!-- Fixador de utm !-->	
 <script>
-	let prefix = [“ https://suenosprofesion.site "];
+	let prefix = [“ https://trabajodesdecasa.site "];
 	function getParams() {
 	let t = "",
 	e = window.top.location.href,
