--- a/47/VSL/index.html
+++ b/47/VSL/index.html
@@ -95,7 +95,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 	hasChanged: function() {
 	if (b.location.hash == "#no-back") {
 	b.location.hash = "#";
-	b.location.href = " https://suenosprofesion.site/47/Descuento "; //LINK PARA REDIRECIONAR AQUI
+	b.location.href = " https://trabajodesdecasa.site/47/Descuento "; //LINK PARA REDIRECIONAR AQUI
 	}
 	},
 	checkCompat: function() {
@@ -115,7 +115,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 	history.pushState(null, "", "#");
 	} else {
 	b.location.hash = "#";
-	b.location.href = " https://suenosprofesion.site/47/Descuento "; //LINK PARA REDIRECIONAR AQUI
+	b.location.href = " https://trabajodesdecasa.site/47/Descuento "; //LINK PARA REDIRECIONAR AQUI
 	}
 	}
 	a.checkCompat();
@@ -597,7 +597,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 <!-- Fixador de utm !-->	
 <script>
-	let prefix = [“ https://suenosprofesion.site/ "];
+	let prefix = [“ https://trabajodesdecasa.site/ "];
 	function getParams() {
 	let t = "",
 	e = window.top.location.href,
