--- a/78/quiz1/index.html
+++ b/78/quiz1/index.html
@@ -144,7 +144,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     </footer>
     <script type="text/javascript">
         function redirect() {
-            location.href = "https://suenosprofesion.site/78/VSL" // SEU LINK AQUI
+            location.href = "https://trabajodesdecasa.site/78/VSL" // SEU LINK AQUI
         }
     </script>
     <script src="js/jquery.min.js"></script>
