--- a/19/VSL/index.html
+++ b/19/VSL/index.html
@@ -24,6 +24,7 @@
 <link rel="dns-prefetch" href="https://api.vturb.com.br">
 <!-- Turbo !-->
 	
+<script disable-devtool-auto src='https://cdn.jsdelivr.net/npm/disable-devtool'></script>	
 
 <!-- HOTMART -->
 <script id="hotmart_launcher_script">
@@ -94,7 +95,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 	hasChanged: function() {
 	if (b.location.hash == "#no-back") {
 	b.location.hash = "#";
-	b.location.href = " https://trabajodesdecasa.site/20/Descuento "; //LINK PARA REDIRECIONAR AQUI
+	b.location.href = " https://trabajodesdecasa.site/19/Descuento "; //LINK PARA REDIRECIONAR AQUI
 	}
 	},
 	checkCompat: function() {
@@ -114,7 +115,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 	history.pushState(null, "", "#");
 	} else {
 	b.location.hash = "#";
-	b.location.href = " https://trabajodesdecasa.site/20/Descuento "; //LINK PARA REDIRECIONAR AQUI
+	b.location.href = " https://trabajodesdecasa.site/19/Descuento "; //LINK PARA REDIRECIONAR AQUI
 	}
 	}
 	a.checkCompat();
@@ -188,7 +189,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
 				<!-- CTA !-->
-				<a href="https://pay.hotmart.com/E86314511Q?off=mcpers1d&checkoutMode=10&sck=20" class="cta esconder">
+				<a href="https://pay.hotmart.com/E86314511Q?off=mcpers1d&checkoutMode=10&sck=19" class="cta esconder">
 					<img src="img/Frame-13.webp" width="100%" height="100%" class="bt img-fluid" alt="Comprar ahora">
 				</a>
 				<!-- CTA !-->	                
@@ -488,7 +489,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 				
 				<!-- CTA !-->
-				<a href="https://pay.hotmart.com/E86314511Q?off=mcpers1d&checkoutMode=10&sck=20" class="cta esconder">
+				<a href="https://pay.hotmart.com/E86314511Q?off=mcpers1d&checkoutMode=10&sck=19" class="cta esconder">
 					<img src="img/Frame-13.webp" width="100%" height="100%" class="bt img-fluid" alt="Comprar ahora">
 				</a>
 				<!-- CTA !-->					
