--- a/19/quiz3/index.html
+++ b/19/quiz3/index.html
@@ -6,6 +6,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+<title>ingresos de los suenos</title>
 
 
   <meta charset="utf-8">
@@ -269,7 +270,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       document.getElementById("quinta").classList.remove("hide")
     }
     function redirect() {
-      location.href = "https://trabajodesdecasa.site/20/VSL" // SEU LINK AQUI
+      location.href = "https://trabajodesdecasa.site/19/VSL" // SEU LINK AQUI
     }
   </script>
 
