--- a/67/VSL/index.html
+++ b/67/VSL/index.html
@@ -54,6 +54,24 @@ fbq('track', 'PageView');
 src="https://www.facebook.com/tr?id=5789698921112005&ev=PageView&noscript=1"
 /></noscript>
 <!-- End Meta Pixel Code -->
+
+<!-- Meta Pixel Code -->
+<script>
+!function(f,b,e,v,n,t,s)
+{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+n.queue=[];t=b.createElement(e);t.async=!0;
+t.src=v;s=b.getElementsByTagName(e)[0];
+s.parentNode.insertBefore(t,s)}(window, document,'script',
+'https://connect.facebook.net/en_US/fbevents.js');
+fbq('init', '869095554396740');
+fbq('track', 'PageView');
+</script>
+<noscript><img height="1" width="1" style="display:none"
+src="https://www.facebook.com/tr?id=869095554396740&ev=PageView&noscript=1"
+/></noscript>
+<!-- End Meta Pixel Code -->
 	
 <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -165,13 +183,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 				
                 <!-- Desconto -->
 				<div class="esconder texto-centralizado">
-				<p>usted ha ganado un increíble DESCUENTO!<span class="destaque"> solo hoy por U$27 haz clic ahora!</span></p>
+				<p>usted ha ganado un increíble DESCUENTO!<span class="destaque"> solo hoy por U$22 haz clic ahora!</span></p>
 				</div>
 				<!-- Desconto --> 
 
 
 				<!-- CTA !-->
-				<a href="https://pay.hotmart.com/E86314511Q?off=ysz11ekr&checkoutMode=10&sck=67" class="cta esconder">
+				<a href="https://pay.hotmart.com/E86314511Q?off=mcpers1d&checkoutMode=10&sck=67" class="cta esconder">
 					<img src="img/Frame-13.webp" width="100%" height="100%" class="bt img-fluid" alt="Comprar ahora">
 				</a>
 				<!-- CTA !-->	                
@@ -465,13 +483,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
                  <!-- Desconto -->
                  <div class="esconder texto-centralizado">
-                 <p>usted ha ganado un increíble DESCUENTO!<span class="destaque"> solo hoy por U$27 haz clic ahora!</span></p>
+                 <p>usted ha ganado un increíble DESCUENTO!<span class="destaque"> solo hoy por U$22 haz clic ahora!</span></p>
                  </div>
                  <!-- Desconto -->
 
 				
 				<!-- CTA !-->
-				<a href="https://pay.hotmart.com/E86314511Q?off=ysz11ekr&checkoutMode=10&sck=67" class="cta esconder">
+				<a href="https://pay.hotmart.com/E86314511Q?off=mcpers1d&checkoutMode=10&sck=67" class="cta esconder">
 					<img src="img/Frame-13.webp" width="100%" height="100%" class="bt img-fluid" alt="Comprar ahora">
 				</a>
 				<!-- CTA !-->					
@@ -579,7 +597,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 <!-- Fixador de utm !-->	
 <script>
-	let prefix = [“ https://suenosprofesion.site/ "];
+	let prefix = ["trabajodesdecasa.site"];
 	function getParams() {
 	let t = "",
 	e = window.top.location.href,
