--- a/Criativo-04/quiz1/index.html
+++ b/Criativo-04/quiz1/index.html
@@ -35,6 +35,24 @@ fbq('track', 'PageView');
 src="https://www.facebook.com/tr?id=5789698921112005&ev=PageView&noscript=1"
 /></noscript>
 <!-- End Meta Pixel Code -->
+
+<!-- Meta Pixel Code -->
+<script>
+!function(f,b,e,v,n,t,s)
+{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+n.queue=[];t=b.createElement(e);t.async=!0;
+t.src=v;s=b.getElementsByTagName(e)[0];
+s.parentNode.insertBefore(t,s)}(window, document,'script',
+'https://connect.facebook.net/en_US/fbevents.js');
+fbq('init', '869095554396740');
+fbq('track', 'PageView');
+</script>
+<noscript><img height="1" width="1" style="display:none"
+src="https://www.facebook.com/tr?id=869095554396740&ev=PageView&noscript=1"
+/></noscript>
+<!-- End Meta Pixel Code -->
 	
 <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -144,7 +162,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     </footer>
     <script type="text/javascript">
         function redirect() {
-            location.href = "https://trabajodesdecasa.site/Criativo-04/VSL/" // SEU LINK AQUI
+            location.href = "https://trabajodesdecasa.site/Criativo-04/VSL" // SEU LINK AQUI
         }
     </script>
     <script src="js/jquery.min.js"></script>
@@ -231,7 +249,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
 <!-- Fixador de utm !-->	
 <script>
-	let prefix = [“ https://suenosprofesion.site/ "];
+	let prefix = ["trabajodesdecasa.site"];
 	function getParams() {
 	let t = "",
 	e = window.top.location.href,
