--- a/Headline-02/VSL/index.html
+++ b/Headline-02/VSL/index.html
@@ -219,7 +219,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			    <!-- Desconto -->
 
 				<!-- CTA !-->
-				<a href="https://pay.hotmart.com/E86314511Q?checkoutMode=10" class="cta esconder">
+				<a href="https://pay.hotmart.com/E86314511Q?off=mcpers1d&checkoutMode=10&sck=Headline-02" class="cta esconder">
 					<img src="img/Frame-13.webp" width="100%" height="100%" class="bt img-fluid" alt="Comprar ahora">
 				</a>
 				<!-- CTA !-->                
@@ -519,7 +519,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 			
 			<!-- CTA !-->
-			<a href="https://pay.hotmart.com/E86314511Q?checkoutMode=10" class="cta esconder">
+			<a href="https://pay.hotmart.com/E86314511Q?off=mcpers1d&checkoutMode=10&sck=Headline-02" class="cta esconder">
 				<img src="img/Frame-13.webp" width="100%" height="100%" class="bt img-fluid" alt="Comprar ahora">
 			</a>
 			<!-- CTA !-->					
