--- a/71/VSL/index.html
+++ b/71/VSL/index.html
@@ -226,7 +226,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
 				<!-- CTA !-->
-				<a href="https://pay.hotmart.com/E86314511Q?off=mcpers1d&checkoutMode=10&sck=71" class="cta esconder">
+				<a href="https://pay.hotmart.com/O59705633J?off=8qa5um2g&checkoutMode=10&sck=71" class="cta esconder">
 					<img src="img/Frame-13.webp" width="100%" height="100%" class="bt img-fluid" alt="Comprar ahora">
 				</a>
 				<!-- CTA !-->	                
@@ -526,7 +526,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 				
 				<!-- CTA !-->
-				<a href="https://pay.hotmart.com/E86314511Q?off=mcpers1d&checkoutMode=10&sck=71" class="cta esconder">
+				<a href="https://pay.hotmart.com/O59705633J?off=8qa5um2g&checkoutMode=10&sck=71" class="cta esconder">
 					<img src="img/Frame-13.webp" width="100%" height="100%" class="bt img-fluid" alt="Comprar ahora">
 				</a>
 				<!-- CTA !-->					
