--- a/ju/VSL/index.html
+++ b/ju/VSL/index.html
@@ -183,7 +183,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
 				<!-- CTA !-->
-				<a href="https://pay.hotmart.com/O59705633J?off=8qa5um2g&checkoutMode=10" class="cta esconder">
+				<a href="https://go.hotmart.com/C87569226Y?ap=e24d" class="cta esconder">
 					<img src="img/Frame-13.webp" width="100%" height="100%" class="bt img-fluid" alt="Comprar ahora">
 				</a>
 				<!-- CTA !-->	                
@@ -483,7 +483,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 				
 				<!-- CTA !-->
-				<a href="https://pay.hotmart.com/O59705633J?off=8qa5um2g&checkoutMode=10" class="cta esconder">
+				<a href="https://go.hotmart.com/C87569226Y?ap=e24d" class="cta esconder">
 					<img src="img/Frame-13.webp" width="100%" height="100%" class="bt img-fluid" alt="Comprar ahora">
 				</a>
 				<!-- CTA !-->					
