--- a/01/VSL/index.html
+++ b/01/VSL/index.html
@@ -14,10 +14,10 @@
 <!-- CSS Bootstrap !-->
 
 <!-- Turbo !-->
-<link rel="preload" href="https://scripts.converteai.net/bf52517c-e7cd-47ae-97f0-de3f4f9f984d/players/651e0d78f4b22b0009eec4aa/player.js" as="script">
+<link rel="preload" href="https://scripts.converteai.net/bf52517c-e7cd-47ae-97f0-de3f4f9f984d/players/6526308cb3bc0300090f6ef6/player.js" as="script">
 <link rel="preload" href="https://cdn.converteai.net/lib/js/smartplayer/v1/smartplayer.min.js" as="script">
-<link rel="preload" href="https://images.converteai.net/bf52517c-e7cd-47ae-97f0-de3f4f9f984d/players/651e0d78f4b22b0009eec4aa/thumbnail.jpg" as="image">
-<link rel="preload" href="https://cdn.converteai.net/bf52517c-e7cd-47ae-97f0-de3f4f9f984d/64d6b2b07b941e0009cae890/main.m3u8" as="fetch">
+<link rel="preload" href="https://images.converteai.net/bf52517c-e7cd-47ae-97f0-de3f4f9f984d/players/6526308cb3bc0300090f6ef6/thumbnail.jpg" as="image">
+<link rel="preload" href="https://cdn.converteai.net/bf52517c-e7cd-47ae-97f0-de3f4f9f984d/65262fd5212ff200090d4918/main.m3u8" as="fetch">
 <link rel="dns-prefetch" href="https://cdn.converteai.net">
 <link rel="dns-prefetch" href="https://scripts.converteai.net">
 <link rel="dns-prefetch" href="https://images.converteai.net">
@@ -82,11 +82,47 @@ n.queue=[];t=b.createElement(e);t.async=!0;
 t.src=v;s=b.getElementsByTagName(e)[0];
 s.parentNode.insertBefore(t,s)}(window, document,'script',
 'https://connect.facebook.net/en_US/fbevents.js');
+fbq('init', '1163235144247247');
+fbq('track', 'PageView');
+</script>
+<noscript><img height="1" width="1" style="display:none"
+src="https://www.facebook.com/tr?id=1163235144247247&ev=PageView&noscript=1"
+/></noscript>
+<!-- End Meta Pixel Code -->
+
+<!-- Meta Pixel Code -->
+<script>
+!function(f,b,e,v,n,t,s)
+{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+n.queue=[];t=b.createElement(e);t.async=!0;
+t.src=v;s=b.getElementsByTagName(e)[0];
+s.parentNode.insertBefore(t,s)}(window, document,'script',
+'https://connect.facebook.net/en_US/fbevents.js');
 fbq('init', '869095554396740');
 fbq('track', 'PageView');
 </script>
 <noscript><img height="1" width="1" style="display:none"
 src="https://www.facebook.com/tr?id=869095554396740&ev=PageView&noscript=1"
+/></noscript>
+<!-- End Meta Pixel Code -->
+
+<!-- Meta Pixel Code -->
+<script>
+!function(f,b,e,v,n,t,s)
+{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+n.queue=[];t=b.createElement(e);t.async=!0;
+t.src=v;s=b.getElementsByTagName(e)[0];
+s.parentNode.insertBefore(t,s)}(window, document,'script',
+'https://connect.facebook.net/en_US/fbevents.js');
+fbq('init', '1163235144247247');
+fbq('track', 'PageView');
+</script>
+<noscript><img height="1" width="1" style="display:none"
+src="https://www.facebook.com/tr?id=1163235144247247&ev=PageView&noscript=1"
 /></noscript>
 <!-- End Meta Pixel Code -->
 	
@@ -211,7 +247,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 				<div class="video-vsl">
 					
 					<!-- Scrip do vídeo aqui !-->
-					<div id="vid_651e0d78f4b22b0009eec4aa" style="position:relative;width:100%;padding: 56.25% 0 0;"><img id="thumb_651e0d78f4b22b0009eec4aa" src="https://images.converteai.net/bf52517c-e7cd-47ae-97f0-de3f4f9f984d/players/651e0d78f4b22b0009eec4aa/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"><div id="backdrop_651e0d78f4b22b0009eec4aa" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div></div><script type="text/javascript" id="scr_651e0d78f4b22b0009eec4aa">var s=document.createElement("script");s.src="https://scripts.converteai.net/bf52517c-e7cd-47ae-97f0-de3f4f9f984d/players/651e0d78f4b22b0009eec4aa/player.js",s.async=!0,document.head.appendChild(s);</script>				</div>
+					<div id="vid_6526308cb3bc0300090f6ef6" style="position:relative;width:100%;padding: 56.25% 0 0;"><img id="thumb_6526308cb3bc0300090f6ef6" src="https://images.converteai.net/bf52517c-e7cd-47ae-97f0-de3f4f9f984d/players/6526308cb3bc0300090f6ef6/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"><div id="backdrop_6526308cb3bc0300090f6ef6" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div></div><script type="text/javascript" id="scr_6526308cb3bc0300090f6ef6">var s=document.createElement("script");s.src="https://scripts.converteai.net/bf52517c-e7cd-47ae-97f0-de3f4f9f984d/players/6526308cb3bc0300090f6ef6/player.js",s.async=!0,document.head.appendChild(s);</script>				</div>
 				
 				<h3>
 					<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-volume-up-fill" viewBox="0 0 16 16">
@@ -253,7 +289,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 						document.addEventListener("DOMContentLoaded", function() {
 
 						/* Altere o valor de em SECONDS_TO_DISPLAY = 00 para o tempo em segundo que a ação irá acontecer */
-						var SECONDS_TO_DISPLAY = 868;
+						var SECONDS_TO_DISPLAY = 880;
 						var CLASS_TO_DISPLAY = ".esconder";
 
 						/* Comando de conexão do player do vturb */
