--- a/09/VSL/index.html
+++ b/09/VSL/index.html
@@ -14,9 +14,9 @@
 <!-- CSS Bootstrap !-->
 
 <!-- Turbo !-->
-<link rel="preload" href="https://scripts.converteai.net/bf52517c-e7cd-47ae-97f0-de3f4f9f984d/players/6533471e1f321400096c8a11/player.js" as="script">
+<link rel="preload" href="https://scripts.converteai.net/bf52517c-e7cd-47ae-97f0-de3f4f9f984d/players/6526308cb3bc0300090f6ef6/player.js" as="script">
 <link rel="preload" href="https://cdn.converteai.net/lib/js/smartplayer/v1/smartplayer.min.js" as="script">
-<link rel="preload" href="https://images.converteai.net/bf52517c-e7cd-47ae-97f0-de3f4f9f984d/players/6533471e1f321400096c8a11/thumbnail.jpg" as="image">
+<link rel="preload" href="https://images.converteai.net/bf52517c-e7cd-47ae-97f0-de3f4f9f984d/players/6526308cb3bc0300090f6ef6/thumbnail.jpg" as="image">
 <link rel="preload" href="https://cdn.converteai.net/bf52517c-e7cd-47ae-97f0-de3f4f9f984d/65262fd5212ff200090d4918/main.m3u8" as="fetch">
 <link rel="dns-prefetch" href="https://cdn.converteai.net">
 <link rel="dns-prefetch" href="https://scripts.converteai.net">
@@ -33,7 +33,7 @@
 	e=a.getElementsByTagName(u)[0];h.async=1;h.src=n;e.parentNode.insertBefore(h,e)
 	})(window,document,'script','//launcher.hotmart.com/launcher.js','hot');
 
-	hot('account','b5870f87-ac3a-3cfe-9c22-7daf7ae54dea');
+	hot('account','5f6cf9ce-2155-3c9c-bcf5-3aff27fc87d8');
 </script>
 <!-- HOTMART -->
 
@@ -238,7 +238,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
 				<!-- CTA !-->
-				<a href="https://pay.hotmart.com/O59705633J?off=12ar6aev&checkoutMode=10&sck=09" class="cta esconder">
+				<a href="https://pay.hotmart.com/G86386812A?off=wf0scpl7&checkoutMode=10&sck=09" class="cta esconder">
 					<img src="img/Frame-13.webp" width="100%" height="100%" class="bt img-fluid" alt="Comprar ahora">
 				</a>
 				<!-- CTA !-->	                
@@ -538,7 +538,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 				
 				<!-- CTA !-->
-				<a href="https://pay.hotmart.com/O59705633J?off=12ar6aev&checkoutMode=10&sck=09" class="cta esconder">
+				<a href="https://pay.hotmart.com/G86386812A?off=wf0scpl7&checkoutMode=10&sck=09" class="cta esconder">
 					<img src="img/Frame-13.webp" width="100%" height="100%" class="bt img-fluid" alt="Comprar ahora">
 				</a>
 				<!-- CTA !-->					
