--- a/UP01/VSL/index.html
+++ b/UP01/VSL/index.html
@@ -177,7 +177,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <!-- Desconto -->
 				<div class="row">
 					<div class="col-md-12 col-lg-12 col-sm-12">
-						<div  class="cta esconder"><h2>De U̶S̶$̶ ̶5̶9̶.̶9̶0̶ <i>Por Solo US$ 9.90</i></h2></div>
+						<div  class="cta esconder"><h2> DE U̶S$ 9.90 <i>POR SOLO US$ 6.00</i></h2></div>
 					</div>
 				</div>
 				<!-- Desconto --> 
@@ -198,7 +198,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
     <script>
         opts = {
-            key: 'USL-110807-342438-1b8580ac67c6dd513a39c03bd7930fea',
+            key: 'USL-118151-378800-fbe4d24adba35c1312af1cca09a08838',
             width: '650',
             height: '420'
         };
