--- a/UP01/VSL/index.html
+++ b/UP01/VSL/index.html
@@ -196,14 +196,15 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </div>
     <script src="https://pay.hotmart.com/assets/js/hotmart.upsell_checkout.js"></script>
 
-    <script>
-        opts = {
-            key: 'USL-118151-378800-fbe4d24adba35c1312af1cca09a08838',
-            width: '650',
-            height: '420'
-        };
-        Upsell.Widget.show(opts);
-    </script>               
+<script>
+opts = {
+key: 'USL-118151-378800-fbe4d24adba35c1312af1cca09a08838',
+width: '650' ,
+height: '420'
+};
+Upsell.Widget.show(opts);
+</script>
+<!-- HOTMART - Upsell Widget [end] -->               
                 
 			</div>
 		</div>
