--- a/UP02/VSL/index.html
+++ b/UP02/VSL/index.html
@@ -181,16 +181,17 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div style="display: flex; justify-content: center;">
         <div id="box_hotmart" style="text-align: center;"></div>
     </div>
-    <script src="https://pay.hotmart.com/assets/js/hotmart.upsell_checkout.js"></script>
+<script src="https://pay.hotmart.com/assets/js/hotmart.upsell_checkout.js"></script>
 
-    <script>
-        opts = {
-            key: 'USL-118151-378802-5cfa7742c91273dd49fe0b0a27d946af',
-            width: '650',
-            height: '420'
-        };
-        Upsell.Widget.show(opts);
-    </script>               
+<script>
+opts = {
+key: 'USL-118151-378802-5cfa7742c91273dd49fe0b0a27d946af',
+width: '650' ,
+height: '420'
+};
+Upsell.Widget.show(opts);
+</script>
+<!-- HOTMART - Upsell Widget [end] -->               
                 
 			</div>
 		</div>
