--- a/01/VSL/index.html
+++ b/01/VSL/index.html
@@ -348,7 +348,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					<table class="fb-comments-comment">
 						<tbody>
 							<tr>
-								<td class="fb-comments-comment-img" rowspan="3"><img width="48" height="48" src="https://i.im.ge/2023/08/19/m1eHOW.9.webp" alt="Foto Usuário"></td>
+								<td class="fb-comments-comment-img" rowspan="3"><img width="48" height="48" src="https://s4.aconvert.com/convert/p3r68-cdx67/ayn3p-cwrep.jpg" alt="Foto Usuário"></td>
 								<td><font class="fb-comments-comment-name"><name>Magda Arantes</name> </font></td>
 							</tr>
 							<tr>
@@ -365,7 +365,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 						<table class="fb-comments-comment">
 							<tbody>
 								<tr>
-									<td class="fb-comments-comment-img" rowspan="3"><img width="48" height="48" src="https://i.im.ge/2023/08/19/m1eNTK.4.webp" alt="Foto Usuário"></td>
+									<td class="fb-comments-comment-img" rowspan="3"><img width="48" height="48" src="https://s4.aconvert.com/convert/p3r68-cdx67/ajnoy-uxw9o.jpg" alt="Foto Usuário"></td>
 									<td><font class="fb-comments-comment-name"><name>Yolanda Garcia</name> </font></td>
 								</tr>
 								<tr>
@@ -384,7 +384,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					<table class="fb-comments-comment">
 						<tbody>
 							<tr>
-								<td class="fb-comments-comment-img" rowspan="3"><img width="48" height="48" src="https://i.im.ge/2023/08/19/m1eGBx.7.webp" alt="Foto Usuário"></td>
+								<td class="fb-comments-comment-img" rowspan="3"><img width="48" height="48" src="https://s4.aconvert.com/convert/p3r68-cdx67/abr4q-ublf9.jpg" alt="Foto Usuário"></td>
 								<td><font class="fb-comments-comment-name"><name>Juan Soares</name> </font></td>
 							</tr>
 							<tr>
@@ -401,7 +401,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 						<table class="fb-comments-comment">
 							<tbody>
 								<tr>
-									<td class="fb-comments-comment-img" rowspan="3"><img width="48" height="48" src="https://i.im.ge/2023/08/19/m1eNTK.4.webp" alt="Foto Usuário"></td>
+									<td class="fb-comments-comment-img" rowspan="3"><img width="48" height="48" src="https://s4.aconvert.com/convert/p3r68-cdx67/ajnoy-uxw9o.jpg" alt="Foto Usuário"></td>
 									<td><font class="fb-comments-comment-name"><name>Yolanda Garcia</name> </font></td>
 								</tr>
 								<tr>
@@ -420,7 +420,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					<table class="fb-comments-comment">
 						<tbody>
 							<tr>
-								<td class="fb-comments-comment-img" rowspan="3"><img width="48" height="48" src="https://i.im.ge/2023/08/19/m2M1b9.3.webp" alt="Foto Usuário"></td>
+								<td class="fb-comments-comment-img" rowspan="3"><img width="48" height="48" src="https://s4.aconvert.com/convert/p3r68-cdx67/ax0p3-bymtu.jpg" alt="Foto Usuário"></td>
 								<td><font class="fb-comments-comment-name"><name>Nelia Orozco</name> </font></td>
 							</tr>
 							<tr>
