--- a/206/quiz1/index.html
+++ b/206/quiz1/index.html
@@ -162,7 +162,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     </footer>
     <script type="text/javascript">
         function redirect() {
-            location.href = "https://trabajodesdecasa.site/206VSL" // SEU LINK AQUI
+            location.href = "https://trabajodesdecasa.site/206/VSL" // SEU LINK AQUI
         }
     </script>
     <script src="js/jquery.min.js"></script>
