--- a/210/quiz1/index.html
+++ b/210/quiz1/index.html
@@ -162,7 +162,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     </footer>
     <script type="text/javascript">
         function redirect() {
-            location.href = "https://trabajodesdecasa.site/210VSL" // SEU LINK AQUI
+            location.href = "https://trabajodesdecasa.site/210/VSL" // SEU LINK AQUI
         }
     </script>
     <script src="js/jquery.min.js"></script>
