--- a/01/VSL/index.html
+++ b/01/VSL/index.html
@@ -231,12 +231,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		<!-- Headline !-->
 		<div class="row">
 			<div class="col-md-12 col-lg-12 col-sm-12">
-				<h2><i></i>Un nuevo programa de empresas multinacionales paga a las personas  con tiempo libre de <u>44 a 178 Dólares</u></i> por hacer <u>“micro tareas”</u></i> en casa.<u></u></h2>
+				<h2></i>Nuevo programa internacional permite ingresos adicionales de<u>$45 a $175 por dia</u></i>con solo calificar positivamente las aplicaciones móviles:<u></u></h2>
 			</div>
 		</div>
 		<!-- Headline !-->
 
-		<h5><u> demanda de nuevos interesados es alta debido al registro de nuevas empresas.</u></h5>
+		<h5><u> La demanda de nuevos participantes es alta.</u></h5>
 		
 		<!-- VSL !-->
 		<div class="row">
