--- a/UP02/VSL/index.html
+++ b/UP02/VSL/index.html
@@ -178,20 +178,19 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 <div class="esconder">
     <!-- HOTMART - Upsell Widget -->
-    <div style="display: flex; justify-content: center;">
-        <div id="box_hotmart" style="text-align: center;"></div>
-    </div>
+<div id="box_hotmart"></div>
 <script src="https://pay.hotmart.com/assets/js/hotmart.upsell_checkout.js"></script>
 
 <script>
 opts = {
-key: 'USL-118407-379843-66526ec3652a2d59a294915613d6b402',
+key: 'USL-118407-379842-f07fb00e220b174d5b24c8f8ee2f3341',
 width: '650' ,
 height: '420'
 };
 Upsell.Widget.show(opts);
 </script>
-<!-- HOTMART - Upsell Widget [end] -->               
+<!-- HOTMART - Upsell Widget [end] -->
+              
                 
 			</div>
 		</div>
