--- a/38/VSL/index.html
+++ b/38/VSL/index.html
@@ -14,10 +14,10 @@
 <!-- CSS Bootstrap !-->
 
 <!-- Turbo !-->
-<link rel="preload" href="https://scripts.converteai.net/bf52517c-e7cd-47ae-97f0-de3f4f9f984d/players/64ec0385fc6f580009277e9e/player.js" as="script">
+<link rel="preload" href="https://scripts.converteai.net/bf52517c-e7cd-47ae-97f0-de3f4f9f984d/players/653da7d067a28d000819396d/player.js" as="script">
 <link rel="preload" href="https://cdn.converteai.net/lib/js/smartplayer/v1/smartplayer.min.js" as="script">
-<link rel="preload" href="https://images.converteai.net/bf52517c-e7cd-47ae-97f0-de3f4f9f984d/players/64ec0385fc6f580009277e9e/thumbnail.jpg" as="image">
-<link rel="preload" href="https://cdn.converteai.net/bf52517c-e7cd-47ae-97f0-de3f4f9f984d/64d6b2b07b941e0009cae890/main.m3u8" as="fetch">
+<link rel="preload" href="https://images.converteai.net/bf52517c-e7cd-47ae-97f0-de3f4f9f984d/players/653da7d067a28d000819396d/thumbnail.jpg" as="image">
+<link rel="preload" href="https://cdn.converteai.net/bf52517c-e7cd-47ae-97f0-de3f4f9f984d/653c03445983360009a1eedd/main.m3u8" as="fetch">
 <link rel="dns-prefetch" href="https://cdn.converteai.net">
 <link rel="dns-prefetch" href="https://scripts.converteai.net">
 <link rel="dns-prefetch" href="https://images.converteai.net">
@@ -194,7 +194,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 				<div class="video-vsl">
 					
 					<!-- Scrip do vídeo aqui !-->
-					<div id="vid_6533471e1f321400096c8a11" style="position:relative;width:100%;padding: 56.25% 0 0;"><img id="thumb_6533471e1f321400096c8a11" src="https://images.converteai.net/bf52517c-e7cd-47ae-97f0-de3f4f9f984d/players/6533471e1f321400096c8a11/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"><div id="backdrop_6533471e1f321400096c8a11" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div></div><script type="text/javascript" id="scr_6533471e1f321400096c8a11">var s=document.createElement("script");s.src="https://scripts.converteai.net/bf52517c-e7cd-47ae-97f0-de3f4f9f984d/players/6533471e1f321400096c8a11/player.js",s.async=!0,document.head.appendChild(s);</script>				</div>
+					<div id="vid_653da7d067a28d000819396d" style="position:relative;width:100%;padding: 56.25% 0 0;"><img id="thumb_653da7d067a28d000819396d" src="https://images.converteai.net/bf52517c-e7cd-47ae-97f0-de3f4f9f984d/players/653da7d067a28d000819396d/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"><div id="backdrop_653da7d067a28d000819396d" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div></div><script type="text/javascript" id="scr_653da7d067a28d000819396d">var s=document.createElement("script");s.src="https://scripts.converteai.net/bf52517c-e7cd-47ae-97f0-de3f4f9f984d/players/653da7d067a28d000819396d/player.js",s.async=!0,document.head.appendChild(s);</script>				</div>
 				
 				<h3>
 					<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-volume-up-fill" viewBox="0 0 16 16">
@@ -236,7 +236,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 						document.addEventListener("DOMContentLoaded", function() {
 
 						/* Altere o valor de em SECONDS_TO_DISPLAY = 00 para o tempo em segundo que a ação irá acontecer */
-						var SECONDS_TO_DISPLAY = 880;
+						var SECONDS_TO_DISPLAY = 840;
 						var CLASS_TO_DISPLAY = ".esconder";
 
 						/* Comando de conexão do player do vturb */
@@ -295,7 +295,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					<table class="fb-comments-comment">
 						<tbody>
 							<tr>
-								<td class="fb-comments-comment-img" rowspan="3"><img width="48" height="48" src="https://i.im.ge/2023/08/19/m1eHOW.9.webp" alt="Foto Usuário"></td>
+								<td class="fb-comments-comment-img" rowspan="3"><img width="48" height="48" src="https://s4.aconvert.com/convert/p3r68-cdx67/ayn3p-cwrep.jpg" alt="Foto Usuário"></td>
 								<td><font class="fb-comments-comment-name"><name>Magda Arantes</name> </font></td>
 							</tr>
 							<tr>
@@ -312,7 +312,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 						<table class="fb-comments-comment">
 							<tbody>
 								<tr>
-									<td class="fb-comments-comment-img" rowspan="3"><img width="48" height="48" src="https://i.im.ge/2023/08/19/m1eNTK.4.webp" alt="Foto Usuário"></td>
+									<td class="fb-comments-comment-img" rowspan="3"><img width="48" height="48" src="https://s4.aconvert.com/convert/p3r68-cdx67/ajnoy-uxw9o.jpg" alt="Foto Usuário"></td>
 									<td><font class="fb-comments-comment-name"><name>Yolanda Garcia</name> </font></td>
 								</tr>
 								<tr>
@@ -331,7 +331,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					<table class="fb-comments-comment">
 						<tbody>
 							<tr>
-								<td class="fb-comments-comment-img" rowspan="3"><img width="48" height="48" src="https://i.im.ge/2023/08/19/m1eGBx.7.webp" alt="Foto Usuário"></td>
+								<td class="fb-comments-comment-img" rowspan="3"><img width="48" height="48" src="https://s4.aconvert.com/convert/p3r68-cdx67/abr4q-ublf9.jpg" alt="Foto Usuário"></td>
 								<td><font class="fb-comments-comment-name"><name>Juan Soares</name> </font></td>
 							</tr>
 							<tr>
@@ -348,7 +348,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 						<table class="fb-comments-comment">
 							<tbody>
 								<tr>
-									<td class="fb-comments-comment-img" rowspan="3"><img width="48" height="48" src="https://i.im.ge/2023/08/19/m1eNTK.4.webp" alt="Foto Usuário"></td>
+									<td class="fb-comments-comment-img" rowspan="3"><img width="48" height="48" src="https://s4.aconvert.com/convert/p3r68-cdx67/ajnoy-uxw9o.jpg" alt="Foto Usuário"></td>
 									<td><font class="fb-comments-comment-name"><name>Yolanda Garcia</name> </font></td>
 								</tr>
 								<tr>
@@ -367,7 +367,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					<table class="fb-comments-comment">
 						<tbody>
 							<tr>
-								<td class="fb-comments-comment-img" rowspan="3"><img width="48" height="48" src="https://i.im.ge/2023/08/19/m2M1b9.3.webp" alt="Foto Usuário"></td>
+								<td class="fb-comments-comment-img" rowspan="3"><img width="48" height="48" src="https://s4.aconvert.com/convert/p3r68-cdx67/ax0p3-bymtu.jpg" alt="Foto Usuário"></td>
 								<td><font class="fb-comments-comment-name"><name>Nelia Orozco</name> </font></td>
 							</tr>
 							<tr>
