--- a/UP01/VSL/index.html
+++ b/UP01/VSL/index.html
@@ -189,7 +189,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     }
 </style>
 
-<div class="esconder">
+<div class="esconde">
 <!-- HOTMART - Upsell Widget -->
 <div style="display: flex; justify-content: center;">
 <div id="box_hotmart" style="text-align: center;"></div>
@@ -197,13 +197,15 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 <script>
 opts = {
-key: 'USL-119290-384005-b343c5662e59df75aba20d636e78e10f',
+key: 'USL-119437-383835-36929166a0e947e4953d1874d87f457a',
 width: '650' ,
 height: '420'
 };
 Upsell.Widget.show(opts);
 </script>
 <!-- HOTMART - Upsell Widget [end] -->
+
+
 
               
                 
