--- a/remarketing/vsl/index.html
+++ b/remarketing/vsl/index.html
@@ -223,14 +223,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 				</h4>
 			
                 <!-- Desconto -->
-			    <div class="esconder texto-centralizado">
-			    <p>usted ha ganado un increíble DESCUENTO!<span class="destaque"> solo hoy por U$19 haz clic ahora!</span></p>
+			    <div class=" texto-centralizado">
+			    <p>usted ha ganado un increíble DESCUENTO!<span class="destaque"> solo hoy por U$10 haz clic ahora!</span></p>
 			    </div>
 			    <!-- Desconto -->
 
 
 				<!-- CTA !-->
-				<a href="https://pay.hotmart.com/G86386812A?off=wf0scpl7&checkoutMode=10&sck=remarketing" class="cta ">
+				<a href="https://pay.hotmart.com/G86386812A?off=02crk11r&checkoutMode=10&sck=remarketing" class="cta ">
 					<img src="img/Frame-13.webp" width="100%" height="100%" class="bt img-fluid" alt="Comprar ahora">
 				</a>
 				<!-- CTA !-->	                
@@ -523,14 +523,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 				
 
                  <!-- Desconto -->
-                 <div class="esconder texto-centralizado">
-                 <p>usted ha ganado un increíble DESCUENTO!<span class="destaque"> solo hoy por U$19 haz clic ahora!</span></p>
+                 <div class=" texto-centralizado">
+                 <p>usted ha ganado un increíble DESCUENTO!<span class="destaque"> solo hoy por U$10 haz clic ahora!</span></p>
                  </div>
                  <!-- Desconto -->
 
 				
 				<!-- CTA !-->
-				<a href="https://pay.hotmart.com/G86386812A?off=wf0scpl7&checkoutMode=10&sck=remarketing" class="cta esconder">
+				<a href="https://pay.hotmart.com/G86386812A?off=02crk11r&checkoutMode=10&sck=remarketing" class="cta ">
 					<img src="img/Frame-13.webp" width="100%" height="100%" class="bt img-fluid" alt="Comprar ahora">
 				</a>
 				<!-- CTA !-->					
