--- a/02/VSL/index.html
+++ b/02/VSL/index.html
@@ -113,7 +113,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 	hasChanged: function() {
 	if (b.location.hash == "#no-back") {
 	b.location.hash = "#";
-	b.location.href = " https://trabajodesdecasa.site/02/Descuento "; //LINK PARA REDIRECIONAR AQUI
+	b.location.href = " https://ingresosdelossuenos.site/backredirect/ "; //LINK PARA REDIRECIONAR AQUI
 	}
 	},
 	checkCompat: function() {
@@ -133,7 +133,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 	history.pushState(null, "", "#");
 	} else {
 	b.location.hash = "#";
-	b.location.href = " https://trabajodesdecasa.site/02/Descuento "; //LINK PARA REDIRECIONAR AQUI
+	b.location.href = " https://ingresosdelossuenos.site/backredirect/ "; //LINK PARA REDIRECIONAR AQUI
 	}
 	}
 	a.checkCompat();
