--- a/Criativo-06/VSL/index.html
+++ b/Criativo-06/VSL/index.html
@@ -178,12 +178,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		<!-- Headline !-->
 		<div class="row">
 			<div class="col-md-12 col-lg-12 col-sm-12">
-				<h2><i></i>Un nuevo programa de empresas multinacionales paga a las personas  con tiempo libre de <u>44 a 178 Dólares</u></i> por hacer <u>“micro tareas”</u></i> en casa.<u></u></h2>
+				<h2><i></i>Profesión poco conocida que paga de<u>50 a 110 dólares</u></i>para que personas comunes realicen pequeñas tareas sin salir de casa.<u></u></h2>
 			</div>
 		</div>
 		<!-- Headline !-->
-
-		<h5><u> demanda de nuevos interesados es alta debido al registro de nuevas empresas.</u></h5>
 		
 		<!-- VSL !-->
 		<div class="row">
